# guinea-pig

./: .gitlab-ci.yml  CMakeLists.txt  CTestConfig.cmake  ChangeLog  Makefile.in  OUTPUT_FILES  configure  configure.ac
cmake/Modules/: FindFFTW.cmake  FindFFTW2.cmake  compilers.cmake  guinea_config.cmake  guinea_definitions.cmake
src/: CMakeLists.txt  IfileInputOutput.h  LesDefines.h  Makefile.in  abstractIOclass.h  abstractParticle.h  backgroundCPP.cc  backgroundCPP.h  beamCPP.cc  beamCPP.h  beamParametersCPP.cc  beamParametersCPP.h  bhabhaSamplesCPP.cc  bhabhaSamplesCPP.h  config.h  config.h.cmake.in  extraPhotonCPP.h  fieldCPP.cc  fieldCPP.h  fileInputOutput.h  fileInputOutputAscii.h  fourierCPP.cc  fourierCPP.h  gridCPP.cc  gridCPP.h  grvCPP.cc  grvCPP.h  guineapigCPP.cc  guineapigCPP.h  jetParameterCPP.cc  jetParameterCPP.h  lectureDonnees.c  lectureDonnees.h  lumiCPP.cc  lumiCPP.h  mathematicalEntities.h  mathematicalTools.cc  mathematicalTools.h  memory.c  memory.h  (+33 more)
testing/: CMakeLists.txt  result.cfg  result.ref
